--- a/index.html
+++ b/index.html
@@ -1298,162 +1298,206 @@
 							</div>
 						</div>
 					</div>
-				</div>
-
-				<section class="grid-section">
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-1">
-						<h4 class="grid-section__title">
-							Commercial Pool Services
-						</h4>
-						<p class="grid-section__sub">5 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-2">
-						<h4 class="grid-section__title">
-							Lifeguards & Monitors
-						</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-3">
-						<h4 class="grid-section__title">Pool Opening</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-4">
-						<h4 class="grid-section__title">Pool Closing</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-5">
-						<h4 class="grid-section__title">Pool Maintenance</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-6">
-						<h4 class="grid-section__title">
-							Pool Equipment Repairs
-						</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-7">
-						<h4 class="grid-section__title">
-							Pool Equipment Repairs
-						</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-8">
-						<h4 class="grid-section__title">Pool Cleaning</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<div
-						data-toggle="modal"
-						data-target="#sliderModalCenter"
-						class="grid-section__block-9">
-						<h4 class="grid-section__title">Pool Renovations</h4>
-						<p class="grid-section__sub">2 photos</p>
-					</div>
-					<!-- Modal -->
-					<div
-						class="modal fade"
-						id="sliderModalCenter"
-						tabindex="-1"
-						role="dialog"
-						aria-labelledby="exampleModalCenterTitle"
-						aria-hidden="true">
-						<div
-							class="modal-dialog modal-dialog-centered"
-							role="document">
-							<div class="modal-content">
-								<div class="modal-header"></div>
+					<div class="row">
+						<div class="col-12">
+							<section class="grid-section">
 								<div
-									id="carouselExampleControls"
-									class="carousel slide"
-									data-ride="carousel">
-									<div class="carousel-inner">
-										<div class="carousel-item active">
-											<img
-												class="d-block w-100"
-												src="./img/grid-section/block-4.jpg"
-												alt="First slide" />
-										</div>
-										<div class="carousel-item">
-											<img
-												class="d-block w-100"
-												src="./img/grid-section/block-5.jpg"
-												alt="Second slide" />
-										</div>
-										<div class="carousel-item">
-											<img
-												class="d-block w-100"
-												src="./img/grid-section/block-6.jpg"
-												alt="Third slide" />
-										</div>
-										<div class="carousel-item">
-											<img
-												class="d-block w-100"
-												src="./img/grid-section/block-7.jpg"
-												alt="Fourh slide" />
+									role="button"
+									tabindex="1"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-1">
+									<h4 class="grid-section__title">
+										Commercial Pool Services
+									</h4>
+									<p class="grid-section__sub">5 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="2"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-2">
+									<h4 class="grid-section__title">
+										Lifeguards & Monitors
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="3"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-3">
+									<h4 class="grid-section__title">
+										Pool Opening
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="4"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-4">
+									<h4 class="grid-section__title">
+										Pool Closing
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="5"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-5">
+									<h4 class="grid-section__title">
+										Pool Maintenance
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="6"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-6">
+									<h4 class="grid-section__title">
+										Pool Equipment Repairs
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="7"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-7">
+									<h4 class="grid-section__title">
+										Pool Equipment Repairs
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="8"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-8">
+									<h4 class="grid-section__title">
+										Pool Cleaning
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+
+								<div
+									role="button"
+									tabindex="9"
+									data-toggle="modal"
+									data-target="#sliderModalCenter"
+									class="grid-section__block-9">
+									<h4 class="grid-section__title">
+										Pool Renovations
+									</h4>
+									<p class="grid-section__sub">2 photos</p>
+								</div>
+								<!-- Modal -->
+								<div
+									class="modal fade"
+									id="sliderModalCenter"
+									tabindex="-1"
+									role="dialog"
+									aria-labelledby="exampleModalCenterTitle"
+									aria-hidden="true">
+									<div
+										class="modal-dialog modal-dialog-centered"
+										role="document">
+										<div class="modal-content">
+											<div class="modal-header"></div>
+											<div
+												id="carouselExampleControls"
+												class="carousel slide"
+												data-ride="carousel">
+												<div class="carousel-inner">
+													<div
+														class="carousel-item active">
+														<img
+															class="d-block w-100"
+															src="./img/grid-section/block-4.jpg"
+															alt="First slide" />
+													</div>
+													<div class="carousel-item">
+														<img
+															class="d-block w-100"
+															src="./img/grid-section/block-5.jpg"
+															alt="Second slide" />
+													</div>
+													<div class="carousel-item">
+														<img
+															class="d-block w-100"
+															src="./img/grid-section/block-6.jpg"
+															alt="Third slide" />
+													</div>
+													<div class="carousel-item">
+														<img
+															class="d-block w-100"
+															src="./img/grid-section/block-7.jpg"
+															alt="Fourh slide" />
+													</div>
+												</div>
+												<div class="carousel-item">
+													<img
+														class="d-block w-100"
+														src="./img/grid-section/block-8.jpg"
+														alt="Fifth slide" />
+												</div>
+												<a
+													class="carousel-control-prev"
+													href="#carouselExampleControls"
+													role="button"
+													data-slide="prev">
+													<span
+														class="carousel-control-prev-icon"
+														aria-hidden="true"></span>
+													<span class="sr-only"
+														>Previous</span
+													>
+												</a>
+												<a
+													class="carousel-control-next"
+													href="#carouselExampleControls"
+													role="button"
+													data-slide="next">
+													<span
+														class="carousel-control-next-icon"
+														aria-hidden="true"></span>
+													<span class="sr-only"
+														>Next</span
+													>
+												</a>
+											</div>
+											<div class="modal-footer">
+												<button
+													type="button"
+													class="btn btn-secondary"
+													data-dismiss="modal">
+													Close
+												</button>
+											</div>
 										</div>
 									</div>
-									<div class="carousel-item">
-										<img
-											class="d-block w-100"
-											src="./img/grid-section/block-8.jpg"
-											alt="Fifth slide" />
-									</div>
-									<a
-										class="carousel-control-prev"
-										href="#carouselExampleControls"
-										role="button"
-										data-slide="prev">
-										<span
-											class="carousel-control-prev-icon"
-											aria-hidden="true"></span>
-										<span class="sr-only">Previous</span>
-									</a>
-									<a
-										class="carousel-control-next"
-										href="#carouselExampleControls"
-										role="button"
-										data-slide="next">
-										<span
-											class="carousel-control-next-icon"
-											aria-hidden="true"></span>
-										<span class="sr-only">Next</span>
-									</a>
 								</div>
-								<div class="modal-footer">
-									<button
-										type="button"
-										class="btn btn-secondary"
-										data-dismiss="modal">
-										Close
-									</button>
-								</div>
-							</div>
+							</section>
 						</div>
 					</div>
-				</section>
+				</div>
 			</div>
 		</div>
 
