refactor: change tags in grid section

--- a/index.html
+++ b/index.html
@@ -1300,8 +1300,8 @@
 					</div>
 					<div class="row">
 						<div class="col-12">
-							<section class="grid-section">
-								<div
+							<div class="grid-section">
+								<a
 									role="button"
 									tabindex="1"
 									data-toggle="modal"
@@ -1311,9 +1311,9 @@
 										Commercial Pool Services
 									</h4>
 									<p class="grid-section__sub">5 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="2"
 									data-toggle="modal"
@@ -1323,9 +1323,9 @@
 										Lifeguards & Monitors
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="3"
 									data-toggle="modal"
@@ -1335,9 +1335,9 @@
 										Pool Opening
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="4"
 									data-toggle="modal"
@@ -1347,9 +1347,9 @@
 										Pool Closing
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="5"
 									data-toggle="modal"
@@ -1359,9 +1359,9 @@
 										Pool Maintenance
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="6"
 									data-toggle="modal"
@@ -1371,9 +1371,9 @@
 										Pool Equipment Repairs
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="7"
 									data-toggle="modal"
@@ -1383,9 +1383,9 @@
 										Pool Equipment Repairs
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="8"
 									data-toggle="modal"
@@ -1395,9 +1395,9 @@
 										Pool Cleaning
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 
-								<div
+								<a
 									role="button"
 									tabindex="9"
 									data-toggle="modal"
@@ -1407,7 +1407,7 @@
 										Pool Renovations
 									</h4>
 									<p class="grid-section__sub">2 photos</p>
-								</div>
+								</a>
 								<!-- Modal -->
 								<div
 									class="modal fade"
@@ -1494,7 +1494,7 @@
 										</div>
 									</div>
 								</div>
-							</section>
+							</div>
 						</div>
 					</div>
 				</div>
